# delta-dotnet

./: .editorconfig  .gitignore  .gitmodules  CONTRIBUTING.md  DeltaLake.sln  Directory.Build.props  Makefile  README.md
.cargo/: config.toml
.devcontainer/: devcontainer.json
.github/: codeql-config.yml  dependabot.yml
.github/workflows/: build.yml  codeql.yml  package.yml
.scripts/: bootstrap-dev-env.sh  checkout-delta-kernel-rs.sh
examples/local/: Program.cs  README.md  local.csproj
media/: README.md
src/: Directory.Build.props
src/DeltaLake/: DeltaLake.csproj  DeltaLakeException.cs
src/DeltaLake.ApiDoc/: docfx.json  index.md
src/DeltaLake/Bridge/: ByteArray.cs  ByteArrayRef.cs  CancellationToken.cs  Cargo.toml  ForwardedLog.cs  GenerateInterop.rsp  Map.cs  MapRef.cs  RecordBatchReader.cs  RentedByteArrayRef.cs  Runtime.cs  Scope.cs  Table.cs  UnsafeMemoryManager.cs  build.rs  cbindgen.toml
src/DeltaLake/Bridge/Interop/: .editorconfig  Interop.cs  NativeTypeNameAttribute.cs
src/DeltaLake/Bridge/Interop/org/apache/arrow/flatbuf/: Binary.cs  BinaryView.cs  Bool.cs  Buffer.cs  Date.cs  DateUnit.cs  Decimal.cs  DictionaryEncoding.cs  DictionaryKind.cs  Duration.cs  Endianness.cs  Feature.cs  Field.cs  FixedSizeBinary.cs  FixedSizeList.cs  FloatingPoint.cs  Int.cs  Interval.cs  IntervalUnit.cs  KeyValue.cs  LargeBinary.cs  LargeList.cs  LargeListView.cs  LargeUtf8.cs  List.cs  ListView.cs  Map.cs  MetadataVersion.cs  Null.cs  Precision.cs  RunEndEncoded.cs  Schema.cs  Struct_.cs  Time.cs  TimeUnit.cs  Timestamp.cs  Type.cs  Union.cs  UnionMode.cs  Utf8.cs  (+1 more)
src/DeltaLake/Bridge/include/: delta-lake-bridge.h
src/DeltaLake/Bridge/src/: error.rs  lib.rs  runtime.rs  runtime_options.rs  schema.rs  sql.rs  table.rs
(+98 files in other folders)
