[package]
name = "delta-rs-bridge"
version = "0.1.0"
edition = "2021"

[lib]
name = "delta_rs_bridge"
crate-type = ["cdylib", "rlib"]

[dependencies]
arrow = { version = "52", features = ["ffi"]}
chrono = "0.4.31"
# deltalake = "0.16.5"
deltalake = { git = "https://github.com/delta-io/delta-rs.git", tag = "rust-v0.20.0", features = ["azure", "gcs", "s3", "datafusion"] }
futures = "0.3"
libc = "0.2"
serde_json = "1.0.116"
tokio = { version = "1" }
tokio-util = "0.7"

[build-dependencies]
cbindgen = { version="0.27", default-features=false }
