[package]
name = "delta-rs-bridge"
version = "0.1.0"
edition = "2021"

[lib]
name = "delta_rs_bridge"
crate-type = ["cdylib", "rlib"]

[dependencies]
arrow = { version = "53", features = ["ffi"]}
chrono = "0.4.31"
deltalake = { version = "0.24.0", features = ["azure", "gcs", "s3", "datafusion"] }
futures = "0.3"
libc = "0.2"
serde_json = "1.0.137"
tokio = { version = "1" }
tokio-util = "0.7"

[build-dependencies]
cbindgen = { version="0.28", default-features=false }
