[package]
name = "delta-rs-bridge"
version = "0.1.0"
edition = "2021"

[lib]
name = "delta_rs_bridge"
crate-type = ["cdylib", "rlib"]

[profile.release]
strip = true
opt-level = 2
lto = true
codegen-units = 1

[dependencies]
arrow = { version = "57.3.0", features = ["ffi"]}
chrono = "0.4"
deltalake = { version = "0.31.1", features = ["azure", "gcs", "s3", "datafusion"] }
futures = "0.3"
libc = "0.2"
serde_json = "1.0.140"
tokio = { version = "1" }
tokio-util = "0.7"

[build-dependencies]
cbindgen = { version="0.29", default-features=false }
